commit 3:  added song items

--- a/index.html
+++ b/index.html
@@ -22,6 +22,40 @@
     
     <div class="songlist"></div>
     <h1>Best of Military Songs</h1>
+    <div class="songItemContainer">
+        <div class="songitem">
+            <img src="thumbnail_1.jpg" alt="1">
+            <span>Let me love you</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far  fa-play-circle"></i></span></span>
+        </div>
+        <div class="songitem">
+            <img src="sevenNationArmy.jpeg" alt="1">
+            <span>Seven Nation Army</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far  fa-play-circle"></i></span></span>
+        </div>
+        <div class="songitem">
+            <img src="thunder.jpeg" alt="1">
+            <span>Thunder</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+        </div>
+        <div class="songitem">
+            <img src="eyeofsong.jpeg" alt="1">
+            <span>Eye O f Strom</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+        </div>
+        <div class="songitem">
+            <img src="fortunateson.jpeg" alt="1">
+            <span>Fortunate Son</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+        </div>
+        <div class="songitem">
+            <img src="imagine dragon.jpeg" alt="1">
+            <span>No More Tears</span>
+            <span class="SongListPlay"><span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+        </div>
+
+    </div>
+    
     <div class="songbanner"></div>
 </div>
 
